--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,10 @@ canvas {
     @apply opacity-0 translate-y-[100px];
   }
 }
+
+/* ? fix for video size */
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
